Making some changes!

--- a/Server/Pages/Learn008.cshtml
+++ b/Server/Pages/Learn008.cshtml
@@ -23,7 +23,17 @@
 		@(myText)
 	</h3>
 
+	<!--
+		HTML Block Comment - به کلاينت ارسال می‌شود
+	-->
+
 	@*
+		Razor Block Comment - به کلاينت ارسال نمی‌شود
+	*@
+
+	@*
+		Error!
+
 		@(myNewText)
 	*@
 
