Making some changes!

--- a/Server/Pages/Index.cshtml
+++ b/Server/Pages/Index.cshtml
@@ -6,18 +6,17 @@
 <html lang="en">
 <head>
 	<title>Home</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 
 	<h3>
-		Solution (1) - (~)
+		Solution (1)
 	</h3>
 
-	<a href="/Learn001">Learn 001</a>
+	<a href="~/Learn001">Learn 001</a>
 	<br />
-
 	<a href="~/Learn002">Learn 002</a>
 	<br />
 	<a href="~/Learn003">Learn 003</a>
