--- a/Server/Pages/Learn008.cshtml
+++ b/Server/Pages/Learn008.cshtml
@@ -9,8 +9,8 @@
 <html lang="en">
 <head>
 	<title>Home</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 	<h3>
@@ -24,11 +24,11 @@
 	</h3>
 
 	<!--
-		HTML Block Comment - به کلاينت ارسال می‌شود
+		HTML Block Comment - Sent To Client
 	-->
 
 	@*
-		Razor Block Comment - به کلاينت ارسال نمی‌شود
+		Razor Block Comment - Does Not Send To Client
 	*@
 
 	@*
