--- a/Server/Pages/Learn009.cshtml
+++ b/Server/Pages/Learn009.cshtml
@@ -5,8 +5,8 @@
 <html lang="en">
 <head>
 	<title>Home</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 	<h3>
