--- a/Server/Pages/Learn010.cshtml
+++ b/Server/Pages/Learn010.cshtml
@@ -5,8 +5,8 @@
 <html lang="en">
 <head>
 	<title>Home</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 	@@Hello
@@ -46,6 +46,10 @@
 	<hr />
 
 	<img src="/images/@(myImageFileName).jpg" alt="Profile Image" />
+
+	<hr />
+
+	<img src="~/images/@(myImageFileName).jpg" alt="Profile Image" />
 
 	<hr />
 </body>
