--- a/Server/Pages/Learn017/Index.cshtml
+++ b/Server/Pages/Learn017/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
-@model Server.Pages.Learn016Model
+@model Server.Pages.Learn017.IndexModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!doctype html>
 
@@ -8,7 +9,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>Learn 16</title>
+	<title>خانه</title>
 
 	<link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.rtl.min.css" />
 	<link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" />
@@ -28,29 +29,19 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">خانه</a>
+						<a asp-page="/Learn017/" class="nav-link">خانه</a>
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link" href="#">اخبار</a>
+						<a asp-page="/Learn017/Page1" class="nav-link">صفحه ۱</a>
 					</li>
 
 					<li class="nav-item">
-						<a class="nav-link disabled">فروشگاه</a>
+						<a asp-page="/Learn017/Page2" class="nav-link">صفحه ۲</a>
 					</li>
 
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							تنظیمات
-						</a>
-
-						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="#">ارسال تصویر</a></li>
-							<li><a class="dropdown-item" href="#">ویرایش پروفایل</a></li>
-							<li><hr class="dropdown-divider"></li>
-							<li><a class="dropdown-item" href="#">تایید شماره موبایل</a></li>
-							<li><a class="dropdown-item" href="#">تایید نشانی پست الکترونیکی</a></li>
-						</ul>
+					<li class="nav-item">
+						<a asp-page="/Learn017/Googooli" class="nav-link">گوگولی</a>
 					</li>
 				</ul>
 			</div>
@@ -58,14 +49,22 @@
 	</nav>
 
 	<div class="container">
-		<hr />
-
-		<h3>
-			چگونه سایت را فارسی کنیم
+		<h3 class="mt-3">
+			خانه
 		</h3>
 
 		<hr />
 	</div>
+
+	@*
+		<nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-bottom">
+		<div class="container">
+		<span class="navbar-text small">
+		https://ZeusSystem.ir
+		</span>
+		</div>
+		</nav>
+	*@
 
 	<script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
 
