--- a/Server/Pages/Learn016.cshtml
+++ b/Server/Pages/Learn016.cshtml
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.rtl.min.css" />
 	<link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" />
 
-	<link href="~/css/site.css?v=1.0" rel="stylesheet" />
+	<link href="~/css/site.css" rel="stylesheet" />
 </head>
 
 <body>
