--- a/Server/Pages/Shared/_Layout04.cshtml
+++ b/Server/Pages/Shared/_Layout04.cshtml
@@ -1,6 +1,4 @@
-﻿@page
-@model Server.Pages.Learn017.Page1Model
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!doctype html>
 
@@ -9,7 +7,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>صفحه ۱</title>
+	<title>@(ViewBag.Title)</title>
 
 	<link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.rtl.min.css" />
 	<link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" />
@@ -29,19 +27,15 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a asp-page="/Learn017/" class="nav-link">خانه</a>
+						<a asp-page="/Learn018/" class="nav-link">خانه</a>
 					</li>
 
 					<li class="nav-item">
-						<a asp-page="/Learn017/Page1" class="nav-link">صفحه ۱</a>
+						<a asp-page="/Learn018/Page1" class="nav-link">صفحه ۱</a>
 					</li>
 
 					<li class="nav-item">
-						<a asp-page="/Learn017/Page2" class="nav-link">صفحه ۲</a>
-					</li>
-
-					<li class="nav-item">
-						<a asp-page="/Learn017/Googooli" class="nav-link">گوگولی</a>
+						<a asp-page="/Learn018/Page2" class="nav-link">صفحه ۲</a>
 					</li>
 				</ul>
 			</div>
@@ -49,12 +43,16 @@
 	</nav>
 
 	<div class="container">
-		<h3 class="mt-3">
-			صفحه ۱
-		</h3>
-
-		<hr />
+		@(RenderBody())
 	</div>
+
+	<nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-bottom">
+		<div class="container">
+			<span class="navbar-text small">
+				https://ZeusSystem.ir
+			</span>
+		</div>
+	</nav>
 
 	<script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
 
