Making some changes!

--- a/Server/Pages/Shared/_Layout04.cshtml
+++ b/Server/Pages/Shared/_Layout04.cshtml
@@ -44,6 +44,14 @@
 
 	<div class="container">
 		@(RenderBody())
+
+		<hr />
+
+		<div dir="ltr">
+			In Layout: ViewData["MyData"] = ViewBag.MyData: @(ViewBag.MyData)
+		</div>
+
+		<hr />
 	</div>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-bottom">
