Making some changes!

--- a/Server/Pages/Learn017/Index.cshtml
+++ b/Server/Pages/Learn017/Index.cshtml
@@ -57,13 +57,13 @@
 	</div>
 
 	@*
-		<nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-bottom">
-		<div class="container">
-		<span class="navbar-text small">
-		https://ZeusSystem.ir
-		</span>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+		<div class="container" dir="ltr">
+			<span class="navbar-text small">
+				https://ZeusSystem.ir
+			</span>
 		</div>
-		</nav>
+	</nav>
 	*@
 
 	<script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
