--- a/Server/Pages/Shared/_Layout04.cshtml
+++ b/Server/Pages/Shared/_Layout04.cshtml
@@ -54,8 +54,8 @@
 		<hr />
 	</div>
 
-	<nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-bottom">
-		<div class="container">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-bottom">
+		<div class="container" dir="ltr">
 			<span class="navbar-text small">
 				https://ZeusSystem.ir
 			</span>
