Making some changes!

--- a/Server/Pages/Learn016.cshtml
+++ b/Server/Pages/Learn016.cshtml
@@ -65,6 +65,22 @@
 		</h3>
 
 		<hr />
+
+		<div dir="ltr">
+			<ul>
+				<li>Learning Hot Reload</li>
+				<li><a href="https://fontiran.com/" target="_blank">https://FontIran.com</a></li>
+			</ul>
+		</div>
+
+		<div class="ltr">
+			<ul>
+				<li>Learning Hot Reload</li>
+				<li><a href="https://fontiran.com/" target="_blank">https://FontIran.com</a></li>
+			</ul>
+		</div>
+
+		<hr />
 	</div>
 
 	<script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
