--- a/Server/Pages/Learn014.cshtml
+++ b/Server/Pages/Learn014.cshtml
@@ -8,11 +8,11 @@
 <div>
 	@if (fullName.StartsWith("Dariush"))
 	{
-		<span>I'm Dariush</span>
+		<span>I'm Dariush (1)</span>
 	}
 	else
 	{
-		<span>I'm not Dariush</span>
+		<span>I'm not Dariush (1)</span>
 	}
 </div>
 
@@ -22,11 +22,11 @@
 	<div>
 		@if(fullName.StartsWith("Dariush"))
 		{
-			I'm Dariush
+			I'm Dariush (2)
 		}
 		else
 		{
-			I'm not Dariush
+			I'm not Dariush (2)
 		}
 	</div>
 *@
@@ -36,11 +36,11 @@
 <div>
 	@if (fullName.StartsWith("Dariush"))
 	{
-		<text>I'm Dariush</text>
+		<text>I'm Dariush (3)</text>
 	}
 	else
 	{
-		<text>I'm not Dariush</text>
+		<text>I'm not Dariush (3)</text>
 	}
 </div>
 
@@ -49,11 +49,11 @@
 <div>
 	@if (fullName.StartsWith("Dariush"))
 	{
-		<text>I'm <b>Dariush</b></text>
+		<text>I'm <b>Dariush</b> (4)</text>
 	}
 	else
 	{
-		<text>I'm not <b>Dariush</b></text>
+		<text>I'm not <b>Dariush</b> (4)</text>
 	}
 </div>
 
@@ -62,11 +62,11 @@
 <div>
 	@if (fullName.StartsWith("Dariush"))
 	{
-		@:I'm Dariush
+		@:I'm Dariush (5)
 	}
 	else
 	{
-		@:I'm not Dariush
+		@:I'm not Dariush (5)
 	}
 </div>
 
@@ -75,11 +75,11 @@
 <div>
 	@if (fullName.StartsWith("Dariush"))
 	{
-		@:I'm <b>Dariush</b>
+		@:I'm <b>Dariush</b> (6)
 	}
 	else
 	{
-		@:I'm not <b>Dariush</b>
+		@:I'm not <b>Dariush</b> (6)
 	}
 </div>
 
