--- a/Server/Pages/Learn006.cshtml
+++ b/Server/Pages/Learn006.cshtml
@@ -7,9 +7,17 @@
 	<title>Home</title>
 
 	@*
+		Razor Block Comment - Does Not Send To Client
+	*@
+
+	@*
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	*@
+
+	<!--
+		HTML Block Comment - Send To Client
+	-->
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
