Making some changes!

--- a/Server/Pages/Shared/_Layout04.cshtml
+++ b/Server/Pages/Shared/_Layout04.cshtml
@@ -27,7 +27,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a asp-page="/Learn018/" class="nav-link">خانه</a>
+						<a asp-page="/Learn018/Index" class="nav-link">خانه</a>
 					</li>
 
 					<li class="nav-item">
